Update the Free Software Foundation address

--- a/configure.ac
+++ b/configure.ac
@@ -1,13 +1,13 @@
-AC_PREREQ(2.57)
+AC_PREREQ(2.65)
 
-AC_INIT(shared-color-targets, 0.0.1, richard@hughsie.com)
+AC_INIT([shared-color-targets],[0.0.1],[richard@hughsie.com])
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS([config.h])
 
 AC_PROG_CC
 AC_PROG_LN_S
 
-AC_OUTPUT([
+AC_CONFIG_FILES([
 Makefile
 targets/Makefile
 targets/wolf_faust/Makefile
@@ -15,6 +15,7 @@ targets/wolf_faust/reflective/Makefile
 targets/wolf_faust/transmissive/Makefile
 tools/Makefile
 ])
+AC_OUTPUT
 
 echo "
                         shared-color-targets $VERSION
